Kubernetes-Manifests-file/ingress-nodomain.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: basic-ingress
spec:
  defaultBackend:
    service:
      name: frontend   # The default service (e.g., frontend)
      port:
        number: 80
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: api    # The service handling /api
            port: 
              number: 3500
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend  # The service handling the root ("/")
            port: 
              number: 80
      - path: /prometheus
        pathType: Prefix
        backend:
          service:
            name: prometheus-service
            port: 
              number: 9090
      - path: /grafana
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port: 
              number: 3000
